test/files/neg/t4762.check
t4762.scala:15: warning: private[this] value x in class B shadows mutable x inherited from class A.  Changes to x will not be visible within class B - you may want to give them distinct names.
    /* (99,99) */  (this.x, this.y),
                         ^
t4762.scala:48: warning: private[this] value x in class Derived shadows mutable x inherited from class Base.  Changes to x will not be visible within class Derived - you may want to give them distinct names.
  class Derived( x : Int ) extends Base( x ) { override def toString = x.toString }
                                                                       ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
